frontend/test/should_pass/model_init_001.grg
using model_init;

rule r1 {

 replace {
	 a : A;
	 eval {
		 a.i1 = a.i1*2;
	 }
 }
}
