frontend/test/should_fail/attrib_090.grg
using attrib_model_001;

rule dummy {

  replace {
    i:NINT;
    eval { i.a = 2*i.notthere; }
  }
}
